<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/guess_a_number_between" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        tools:text="@string/_01_00" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
         />


    <TextView
        android:id="@+id/resultSmile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emodji"
        android:textSize="55sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handleft"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/randomNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionSign"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handRight"
            android:textSize="55sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="Print Your Guess"
        android:hint="@string/print_your_guess"
        android:inputType="number"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonToCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/check" />

    <Button
        android:id="@+id/buttonToStartNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:allowClickWhenDisabled="false"
        android:text="@string/new_game"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/chance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chances"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/thirdLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/chance"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/secondLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chance"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/firstLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chance"
            android:textSize="30sp" />


    </LinearLayout>


</LinearLayout>