<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginStart="7dp"
        android:text="@string/choose_the_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/easy"
        android:id="@+id/button_easy_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/medium"
        android:id="@+id/button_medium_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/hard"
        android:id="@+id/button_hard_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>