<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background ="@android:color/holo_blue_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:textSize="19sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="6dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonToStartGame"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>